--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="text-white text-center my-1 mx-auto">
                 <p>Styling and formulas used are from the original "Can I Idle This?" website: <a href="https://drboomtown.github.io/">https://drboomtown.github.io/</a></p>
-                <p><a href="mailto:subjectification@gmail.com">email me</a> with any errors or complaints.</p>
+                <p><a href="mailto:sublimedisciple@gmail.com">email me</a> with any errors or complaints.</p>
               </div>
         </div>
     </body>
