--- a/idle-slayer.html
+++ b/idle-slayer.html
@@ -561,7 +561,7 @@ app = new Vue({
                     slayerTier: "Elite"
                 },
                 {
-                    name: "Chaotic Greater Demon",
+                    name: "Chaotic Greater Dragon",
                     attackStyle: "Melee",
                     maxHit: 600,
                     slayerTier: "Master"
@@ -573,7 +573,7 @@ app = new Vue({
                     slayerTier: "Master"
                 },
                 {
-                    name: "Wicked Greater Demon",
+                    name: "Wicked Greater Dragon",
                     attackStyle: "Magic",
                     maxHit: 240,
                     slayerTier: "Master"
@@ -585,7 +585,7 @@ app = new Vue({
                     slayerTier: "Master"
                 },
                 {
-                    name: "Hunting Greater Demon",
+                    name: "Hunting Greater Dragon",
                     attackStyle: "Ranged",
                     maxHit: 600,
                     slayerTier: "Master"
